[project]
name = "disagain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
typing = [
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
